force-app/main/default/objects/copado_envmgr__EnvironmentUser__c/copado_envmgr__EnvironmentUser__c.object-meta.xml
<CustomObject>
    <label>Environment User</label>
    <nameField>
        <label>User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Environment Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>