force-app/main/default/objects/copado_envmgr__EnvironmentUser__c/fields/copado_envmgr__Credential__c.field-meta.xml
<CustomField>
    <fullName>copado_envmgr__Credential__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credential</label>
    <referenceTo>copado__Org__c</referenceTo>
    <relationshipLabel>Environment Users</relationshipLabel>
    <relationshipName>Credential_Users</relationshipName>
    <type>Lookup</type>
</CustomField>