force-app/main/default/objects/copado_envmgr__EnvironmentUser__c/fields/copado_envmgr__EnvironmentPersona__c.field-meta.xml
<CustomField>
    <fullName>copado_envmgr__EnvironmentPersona__c</fullName>
    <label>Environment Persona</label>
    <referenceTo>copado_envmgr__EnvironmentPersona__c</referenceTo>
    <relationshipLabel>Environment Users</relationshipLabel>
    <relationshipName>Environment_Users</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>