force-app/main/default/objects/copado_envmgr__EnvironmentUser__c/fields/copado_envmgr__IsExpired__c.field-meta.xml
<CustomField>
    <fullName>copado_envmgr__IsExpired__c</fullName>
    <formula>copado_envmgr__ExpirationDate__c &lt;= TODAY()</formula>
    <label>Is Expired?</label>
    <type>Checkbox</type>
</CustomField>